RESOLVED FIXED243939
REGRESSION(252876@main): Trailing hanging glyphs should not contribute to scrollable overflow (unless editable)
https://bugs.webkit.org/show_bug.cgi?id=243939
Summary REGRESSION(252876@main): Trailing hanging glyphs should not contribute to scr...
Attachments
[fast-cq]Patch (3.09 KB, patch)
2022-08-15 14:33 PDT, alan
no flags
[fast-cq]Patch (3.12 KB, patch)
2022-08-16 06:12 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2022-08-15 09:30:50 PDT
alan
Comment 2 2022-08-15 11:06:25 PDT
"An overflowing hanging glyph should typically be considered ink overflow so as to avoid creating unnecessary scrollbars, but the UA may treat it as scrollable overflow when the content is editable or in other circumstances where treating it as scrollable overflow would be useful to the user" the <span> </span> produces overhanging glyphs. They should not be considered when computing scrollable overflow.
alan
Comment 3 2022-08-15 14:33:24 PDT
Created attachment 461640 [details] [fast-cq]Patch
EWS
Comment 4 2022-08-16 05:59:17 PDT
No reviewer information in commit message, blocking PR #None
alan
Comment 5 2022-08-16 06:12:13 PDT
Created attachment 461669 [details] [fast-cq]Patch
EWS
Comment 6 2022-08-16 06:14:21 PDT
Committed 253465@main (a1cd009fd592): <https://commits.webkit.org/253465@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461669 [details].
Note You need to log in before you can comment on or make changes to this bug.