REGRESSION(252876@main): Trailing hanging glyphs should not contribute to scrollable overflow (unless editable) https://bugs.webkit.org/show_bug.cgi?id=243939 <rdar://problem/98673361>

Reviewed by Simon Fraser.

Inline box geometry here should only contribute to vertical overflow (horizontal overflow at this point is already computed).

Canonical link: https://commits.webkit.org/253465@main